@@ -1,14 +1,12 @@
 <?php
-// Confirm we are in Coppermine
-define('IN_COPPERMINE', true);
+// Request an OAuth access token from the server.  This can be used to access "protected resources", e.g., password-protected photos.
 
+define('IN_COPPERMINE', true);
 require_once 'cpgOAuth.php';
 
 $matches = $superCage->post->getMatched('oauth_signature_method', '/[\w-]+/');
 
 $oauth = new cpgOAuth($superCage->post->getAlnum('oauth_consumer_key'), $superCage->post->getAlnum('oauth_nonce'), $superCage->post->getInt('oauth_timestamp'), $matches[0], $superCage->post->getAlnum('oauth_token'));
-
-$oauth->checkRequest('request');
 
 $oauth->accessToken();
 ?>
